# equity_signal_discovery

./: 01_eda.ipynb  05_evaluation.ipynb  06_backtest_lite.ipynb  LICENSE  README.md  fetch_data.py  models.py  plotting.py  pyproject.toml  requirements.txt  targets.py  test_features.py
notebooks/: 02_feature_eng.ipynb  03_baseline_models.ipynb  04_tree_models.ipynb
src/: __init__.py  backtest.py  config.py  features.py  metrics.py  validation.py
tests/: test_metrics.py
